--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -1,9 +1,8 @@
-.app-info {
-    margin: 50px auto;
+.search-panel{
+    margin-top: 50px;
     padding: 25px;
     background-color: rgb(100, 100, 255);
-    border-radius: 4px;
+    border-radius: 5px;
     box-shadow: 15px 15px 30px rgba(0,0,0, .15);
     color: #fff;
-    text-align: center;
 }
